--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -4,8 +4,8 @@
 	<alias>
 		<family>serif</family>
 		<prefer>
-			<family>Libertinus Serif</family>
-			<family>Joy Pixels</family>
+			<family>FreeSans</family>
+			<family>Hack Nerd Font Mono</family>
 			<family>Noto Color Emoji</family>
 			<family>FontAwesome</family>
 		</prefer>
@@ -13,8 +13,8 @@
 	<alias>
 		<family>sans-serif</family>
 		<prefer>
-			<family>Libertinus Sans</family>
-			<family>Joy Pixels</family>
+			<family>FreeSans</family>
+			<family>Hack Nerd Font Mono</family>
 			<family>Noto Color Emoji</family>
 			<family>FontAwesome</family>
 		</prefer>
@@ -22,8 +22,8 @@
 	<alias>
 		<family>sans</family>
 		<prefer>
-			<family>Libertinus Sans</family>
-			<family>Joy Pixels</family>
+			<family>FreeSans</family>
+			<family>Hack Nerd Font Mono</family>
 			<family>Noto Color Emoji</family>
 			<family>FontAwesome</family>
 		</prefer>
@@ -31,10 +31,7 @@
 	<alias>
 		<family>monospace</family>
 		<prefer>
-			<family>Noto Sans Mono</family>
-			<family>Libertinus Mono</family>
-			<family>FontAwesome</family>
-			<family>Braille</family>
+			<family>Hack Nerd Font Mono</family>
 		</prefer>
 	</alias>
 </fontconfig>
